Fix: Updated the DT from Get Transaction State

--- a/Framework/GetTransactionData.xaml
+++ b/Framework/GetTransactionData.xaml
@@ -130,7 +130,7 @@
                     </sap:WorkflowViewStateService.ViewState>
                     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Get_Transaction_Data - Invoke Workflow File (Workflows\Get_Transaction_Data.xaml)" sap:VirtualizedContainerService.HintSize="382,195" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Workflows\Get_Transaction_Data.xaml">
                       <ui:InvokeWorkflowFile.Arguments>
-                        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dt_UnresolvedIssues" />
+                        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dt_UnresolvedIssues">[io_dt_TransactionData]</OutArgument>
                       </ui:InvokeWorkflowFile.Arguments>
                     </ui:InvokeWorkflowFile>
                   </Sequence>
